fixed header address overflow

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -10,7 +10,7 @@
     position: relative;
 }
 .logoWrapper h1{
-    font-size: 4.5em;
+    font-size: 55px;
     font-family: 'Zombie';
     display: inline-block;
     max-width: 600px;
